--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,20 @@
         }
     ],
     "require": {
-        "illuminate/cache": "^7.13|^8.0",
-        "illuminate/container": "^7.13|^8.0",
-        "illuminate/console": "^7.13|^8.0",
-        "illuminate/http": "^7.13|^8.0",
-        "illuminate/support": "^7.13|^8.0",
-        "nesbot/carbon": "^2.35"
+        "php": "^8.2",
+        "illuminate/cache": "^10.0|^11.0",
+        "illuminate/container": "^10.0|^11.0",
+        "illuminate/console": "^10.0|^11.0",
+        "illuminate/http": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0",
+        "nesbot/carbon": "^2.63|^3.0",
+        "spatie/laravel-package-tools": "^1.9"
     },
     "require-dev": {
-        "phpunit/phpunit" : "^9.1.5",
-        "orchestra/testbench": "^5.2|^6.0",
-        "mockery/mockery": "^1.4"
+        "laravel/framework": "^10.0|^11.0",
+        "mockery/mockery": "^1.4",
+        "orchestra/testbench": "^8.0|^9.0",
+        "pestphp/pest": "^2.22"
     },
     "autoload": {
         "psr-4": {
@@ -43,8 +46,13 @@
         }
     },
     "scripts": {
-        "psalm": "vendor/bin/psalm",
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/pest"
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
