Update: up tp date with php8 and Laravel 10

--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,9 @@
             ],
             "aliases": {
                 "ResponseCache": "Spatie\\ResponseCache\\Facades\\ResponseCache"
+            },
+            "branch-alias": {
+                "dev-v8.x": "10.0.x-dev"
             }
         }
     },
