Update: new branch v8.x

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,9 @@
             ],
             "aliases": {
                 "ResponseCache": "Spatie\\ResponseCache\\Facades\\ResponseCache"
+            },
+            "branch-alias": {
+                "dev-v8.x": "8.0.x-dev"
             }
         }
     },
